refactored few problems
Signed-off-by: Kishan Khirasariya <kishankhirasariya.kk@gmail.com>